--- a/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
+++ b/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.12" />
   </ItemGroup>
 
   <ItemGroup>
