Fix Error in Page when redirecting, Fix Email Sender in some pages still had interface IEmailSender turn into IEmailNotificationService, Added EmailConfiguration to appsettings.json

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -13,5 +13,10 @@
   "ConnectionStrings": {
     "DBConnection": "Host=localhost;Database=opencrm-development;Username=postgres;Password=postgres"
   },
+  "EmailSettings": {
+    "EmailEnabled": true,
+    "Email": "example@gmail.com",
+    "Password":  "examplePassword"
+  },
   "AllowedHosts": "*"
 }
