Remove publish profiles

--- a/OpenCRM.Web/OpenCRM.Web.csproj
+++ b/OpenCRM.Web/OpenCRM.Web.csproj
@@ -39,4 +39,9 @@
     <ProjectReference Include="..\Modules\OpenCRM.SwissLPD\OpenCRM.SwissLPD.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+    <Folder Include="Properties\ServiceDependencies\" />
+  </ItemGroup>
+
 </Project>
