--- a/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
+++ b/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
@@ -1,26 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
-
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.12" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
-
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\OpenCRM.Core\OpenCRM.Core.csproj" />
   </ItemGroup>
-
-
 </Project>
