Add AppSettings Kestrel Options

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -13,6 +13,13 @@
   "ConnectionStrings": {
     "DBConnection": "Host=localhost;Database=opencrm-development;Username=postgres;Password=postgres"
   },
+  "Kestrel": {
+      "Endpoints": {
+        "HttpsDefaultCert": {
+          "Url": "https://localhost:5005"
+        }
+     }
+  },
   "EmailSettings": {
     "EmailEnabled": true,
     "Email": "example@gmail.com",
