Update Email Service & email Settings

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -44,10 +44,15 @@
       }
     }
   },
-  "EmailSettings": {
-    "EmailEnabled": true,
-    "Email": "example@gmail.com",
-    "Password": "examplePassword"
+  "Email": {
+    "SMTP": {
+      "Enabled": true,
+      "Email": "example@gmail.com",
+      "Server": "",
+      "Username": "example@gmail.com",
+      "Password": "examplePassword",
+      "EnableSsl": true
+    }
   },
   "AllowedHosts": "*"
 }
