Update https & launch settings

--- a/OpenCRM.Web/Properties/launchSettings.json
+++ b/OpenCRM.Web/Properties/launchSettings.json
@@ -38,6 +38,10 @@
   },
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "",
+      "sslPort": 44396
+    }
   }
 }
