Remove appSettings profiles versions

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ bin
 *.db-shm
 *.db-wal
 *.csproj.user
-/OpenCRM.Web/appsettings.Stage.json
+/OpenCRM.Web/appsettings.*.json
 /OpenCRM.Web/wwwroot/media
