Update appsettings Stmp section variables

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -48,10 +48,11 @@
     "SMTP": {
       "Enabled": true,
       "Email": "example@gmail.com",
-      "Server": "",
+      "Server": "ssl0.ovh.net",
       "Username": "example@gmail.com",
       "Password": "examplePassword",
-      "EnableSsl": true
+      "EnableSsl": true,
+      "DefaultCredentials":  false
     }
   },
   "AllowedHosts": "*"
