--- a/OpenCRM.Web/Properties/launchSettings.json
+++ b/OpenCRM.Web/Properties/launchSettings.json
@@ -10,13 +10,14 @@
       "applicationUrl": ""
     },
     "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": ""
+        "commandName": "Project",
+        "launchBrowser": true,
+        "launchUrl": "https://localhost:5005/",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "dotnetRunMessages": true,
+        "applicationUrl": "https://localhost:5005/"
     },
     "IIS Express": {
       "commandName": "IISExpress",
