fix min crud Media

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -42,6 +42,9 @@
       "HttpsDefaultCert": {
         "Url": "https://localhost:5005"
       }
+    },
+    "Limits": {
+      "MaxRequestBodySize": 104857600 // 100 MB en bytes
     }
   },
   "Email": {
