fix min crud Media

--- a/OpenCRM.Web/appsettings.json
+++ b/OpenCRM.Web/appsettings.json
@@ -41,7 +41,10 @@
     "Endpoints": {
         "HttpsDefaultCert": {
         "Url": "https://localhost:5005"
-        }
+      }
+    },
+    "Limits": {
+      "MaxRequestBodySize": 104857600 // 100 MB en bytes
     }
   },
   "Email": {
