--- a/OpenCRM.Web/Properties/launchSettings.json
+++ b/OpenCRM.Web/Properties/launchSettings.json
@@ -12,12 +12,12 @@
     "https": {
         "commandName": "Project",
         "launchBrowser": true,
-        "launchUrl": "https://localhost:5005/",
+        "launchUrl": "https://localhost:5005",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         },
         "dotnetRunMessages": true,
-        "applicationUrl": "https://localhost:5005/"
+        "applicationUrl": "https://localhost:5005"
     },
     "IIS Express": {
       "commandName": "IISExpress",
