--- a/Modules/OpenCRM.SwissLPD/OpenCRM.SwissLPD.csproj
+++ b/Modules/OpenCRM.SwissLPD/OpenCRM.SwissLPD.csproj
@@ -11,6 +11,11 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.2" />
+  </ItemGroup>
+
   <ItemGroup>    <ProjectReference Include="..\..\Core\OpenCRM.Core.Web\OpenCRM.Core.Web.csproj" />
     <ProjectReference Include="..\..\Core\OpenCRM.Core\OpenCRM.Core.csproj" />
 
