--- a/OpenCRM.Web/appsettings.Development.json
+++ b/OpenCRM.Web/appsettings.Development.json
@@ -10,7 +10,6 @@
     */
     "Domain": "qualified.domain.name", // for instance contoso.onmicrosoft.com. Not used in the ASP.NET core template
     "TenantId": "common" // A guid (Tenant ID = Directory ID) or 'common' or 'organizations' or 'consumers'
-
   },
   "DownstreamAPI": {
     /*
@@ -40,7 +39,7 @@
   "Kestrel": {
     "Endpoints": {
       "HttpsDefaultCert": {
-        "Url": "https://localhost:5005"
+        "Url": "http://localhost:5005"
       }
     }
   },
@@ -52,7 +51,7 @@
       "Username": "example@gmail.com",
       "Password": "examplePassword",
       "EnableSsl": true,
-      "DefaultCredentials":  false
+      "DefaultCredentials": false
     }
   },
   "AllowedHosts": "*"
