Create or Get Block in Index.cs

--- a/OpenCRM.Web/Properties/launchSettings.json
+++ b/OpenCRM.Web/Properties/launchSettings.json
@@ -1,13 +1,14 @@
 {
   "profiles": {
     "http": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": ""
+        "commandName": "Project",
+        "launchBrowser": true,
+        "launchUrl": "http://localhost:5005",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "dotnetRunMessages": true,
+        "applicationUrl": "http://localhost:5005"
     },
     "https": {
       "commandName": "Project",
