Added ShowBlockCard in Home & Modified Edit Block

--- a/OpenCRM.Web/OpenCRM.Web.csproj
+++ b/OpenCRM.Web/OpenCRM.Web.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Properties\ServiceDependencies\" />
+    <Folder Include="wwwroot\media\" />
   </ItemGroup>
 
   <ItemGroup>
