--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ bin
 *.db-wal
 *.csproj.user
 /OpenCRM.Web/wwwroot/media
-/OpenCRM.Web/Properties
+/OpenCRM.Web/Properties/launchSettings.json
 /OpenCRM.Web/appsettings.json
