--- a/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
+++ b/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
@@ -22,5 +22,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenCRM.Core\OpenCRM.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Areas\Manage\Pages\Block\CardBlock\" />
   </ItemGroup>  
 </Project>
