--- a/Core/OpenCRM.Core/OpenCRM.Core.csproj
+++ b/Core/OpenCRM.Core/OpenCRM.Core.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+	<Version>0.0.1</Version>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
