--- a/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
+++ b/Core/OpenCRM.Core.Web/OpenCRM.Core.Web.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
-	<Version>0.0.1</Version>
+	<Version>0.0.2</Version>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
